adding home assignment-4

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lesson 2</title>
+  <title>Lesson 4</title>
 </head>
 <body>
   
 
-  <script src ="scripty.js"></script>
+  <script src ="script4.js"></script>
 
 </body>
 </html>
